<resources>
    <string name="login_with">Proceed with either your registered email address or aicortex Wallet ID.</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="proceed">Proceed</string>
    <string name="check_transaction">Check Transaction</string>
    <string name="please_input_wallet_id">Please input your wallet ID</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_cap_E"><u>Email Address</u></string>
    <string name="please_input_email_address">Please input your email address</string>
    <string name="login_with_email">Login with Mail Address</string>
    <string name="login_with_walletId">Login with Wallet ID</string>
    <string name="setup_your_">Setup your Biometric Details</string>
    <string name="setup_your_finger_or_face">Setup your fingerprint or FaceID biometric for quick login.</string>
    <string name="biometric_login_text">Biometric Login</string>
    <string name="turn_off">Turn OFF</string>
    <string name="turn_on">Turn ON</string>
    <string name="cards_accepted">Cards Accepted</string>
    <string name="simply_tap">Simply tap your card, easy peasy!</string>
    <string name="terminal_unlinked">Terminal Unlinked</string>
    <string name="transfer_successful">Transfer Successful</string>
    <string name="transfer_failed">Transfer Failed</string>
    <string name="card_pin_validation">Card PIN Validation</string>
    <string name="hey_there">Hey there!</string>
    <string name="what_is_card_pin">What is your Card Pin? Kindly input it below:</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="n_10_000_00">N 10,000.00</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_payment">Cancel Payment</string>
    <string name="Cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="the_new_new_way_to_bank">the New New way to bank</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_fee">Transaction Fees</string>
    <string name="rrn">RRN</string>
    <string name="card_number">Card Number</string>
    <string name="stan">STAN</string>
    <string name="service_type">Service Type</string>
    <string name="tap_n_pay">Tap &amp; Pay</string>
    <string name="receiver_number">Receiver Number</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="sender_number">Sender Number</string>
    <string name="bak_name">Bank Name</string>
    <string name="sender_name">Sender Name</string>
    <string name="print">Print</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="select_account">Select Account Type</string>
    <string name="hey_there_w">Hey there,\nWhat is your Card Pin?</string>
    <string name="enter_card">Enter Card Pin</string>
    <string name="payment_success">Payment Successful</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="date_time">Monday, Jan 4, 2023 | 4:33pm</string>
    <string name="amount">Amount: N10,700.00</string>
    <string name="proceed_to_dashboard">Proceed to Dashboard</string>
    <string name="input_amount">Input Amount</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="suggested_amount">Suggested amounts</string>
    <string name="or_input_new_amount">Or Input new amount.</string>
    <string name="amount_naira">Amount (Naira)</string>
    <string name="please_input">Please input desired payment amount</string>
    <string name="login_success">Login Successful</string>
    <string name="otp_validation">OTP Validation</string>
    <string name="otp_valid">OTP VALID</string>
    <string name="completed">Completed</string>
    <string name="biometric_login_active">Biometric Login Active</string>
    <string name="biometric_login_inactive">Biometric Login Inactive</string>
    <string name="second_remaining">1:15sec remaining</string>
    <string name="did_not_get_otp"><u>Didn\'t get a code?</u></string>
    <string name="please_type_otp">Please type in the OTP we sent to your Wallet ID number +234 8123456789.</string>
    <string name="nfc_not_supported_device">NFC Not supported on Device!</string>
    <string name="nfc_not_supported_device_text">Kindly use the other payment alternatives (QR or Pay With Bank Transfer). </string>
    <string name="perform_transaction">Perform a Transaction</string>
    <string name="receive_contactless_payment">Receive contactless payment</string>
    <string name="receive_via_qr">Securely accept payment via QR</string>
    <string name="receive_via_transfer">Accept transfers from other banks</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="qr_code">QR Code</string>
    <string name="pay_with_bank_transfer">Pay With Transfer</string>
    <string name="transaction_history">Transaction History</string>
    <string name="view_more">View More ></string>
    <string name="reset_pin">Reset PIN</string>
    <string name="oops_cant_remember_pin">Oops! Can\'t remember your PIN, it happens! Proceed to get an OTP to reset your PIN.</string>
    <string name="please_type_login_otp">Please type in the OTP we sent to your</string>
    <string name="please_type_pin_otp">Please type in the OTP we sent to your </string>
    <string name="otp_will_be_sent">OTP will be sent to</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="pin_reset_success">PIN Reset Successful</string>
    <string name="forgot_pin">Forgot PIN</string>
    <string name="pin">PIN</string>
    <string name="use_wallet_id_underline">Use WalletID</string>
    <string name="use_email_underline">Use Email</string>
    <string name="please_input_wallet_pin">Please input Wallet PIN</string>
    <string name="wallet_is_wid">Wallet ID (WID)</string>
    <string name="empty_wallet_field">Empty Wallet Field</string>
    <string name="empty_email_field">Empty Email Field</string>
    <string name="invalid_wallet_id">Invalid Wallet ID</string>
    <string name="progress_dialog_message">Please wait...</string>
    <string name="otp_sent">Otp sent successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="transaction_cancelled">Transaction cancelled</string>
    <string name="terms_of_use">Terms of use and Privacy Policy</string>
    <string name="link_your_wallet">Link your Wallet to get started!</string>
    <string name="you_need_link_wallet">You need link your Wallet ID. It will only take a moment.</string>
    <string name="text_link_your_wallet">Link Your Wallet</string>
    <string name="move_funds_wallet">Move Funds to Main Wallet </string>
    <string name="secure_wallet">Secure Wallet</string>
    <string name="log_out">Log Out</string>
    <string name="internet_error_msg">Please check your internet connection and try again !</string>
    <string name="no_internet_abort_trn">No Internet Connection!\nAborting transaction.</string>
    <string name="new_app_update">Enjoy new features with App version update.</string>
    <string name="new_app_maintainence" >App is under Maintenance.</string>
    <string name="wallet_not_active">your wallet is not active</string>
    <string name="login_with_email_address">Login with Email Address</string>
    <string name="login_with_wallet_id">Login with Wallet ID</string>
    <string name="suspended">Suspended</string>
    <string name="frozen">Frozen</string>
    <string name="closed">Closed</string>
    <string name="approved">Approved</string>
    <string name="declined">Declined</string>
    <string name="pending">Pending</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="pin_empty">Pin cannot be empty</string>
    <string name="empty_walletId">WalletId cannot be empty</string>
    <string name="four_digit_pin">Please enter 4 digit pin</string>
    <string name="card_detected">Card Detected!</string>
    <string name="master_card">MasterCard</string>
    <string name="pin_creation">PIN Creation</string>
    <string name="enter_valid_email">Invalid Email Id</string>
    <string name="please_create_your_pin">Please enter your PIN (your own security 4-digit PIN) for login and transaction authentication.</string>
    <string name="please_add_your_4digit_pin">Please add your 4-digit PIN to continue.</string>
    <string name="pin_validation">PIN Validation</string>
    <string name="you_are_agree_term_use">By proceeding, you are agreeing to our </string>
    <string name="term_of_use">Terms of Use.</string>
    <string name="n5000">\u20A65,000</string>
    <string name="n7500">\u20A67,500</string>
    <string name="n10000">\u20A610,000</string>
    <string name="n25000">\u20A625,000</string>
    <string name="n50000">\u20A650,000</string>
    <string name="n100000">\u20A6100,000</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="dummy_number">8123456789</string>
    <string name="input_wallet_to_link_terminal">Input your Walled ID to link your terminal now.</string>
    <string name="terminal_link_successful">Terminal Link Successful</string>
    <string name="naira_icon">\u20A6</string>
    <string name="no_biometric_or_hardware">No Biometric Setup/Biometric hardware !</string>
    <string name="user_cancel_biometric">You have cancel Biometric !</string>
    <string name="biometric_setup_successful">Biometric Setup Successful</string>
    <string name="wallet_linked">Wallet Linked</string>
    <string name="wallet_unlinked">Wallet Unlinked</string>
    <string name="transaction_in_progress">Transaction in Progress</string>
    <string name="card_scan">Card Scan</string>
    <string name="user_not_registered_error_message">User not registered! Login with valid user credentials</string>
    <string name="invalid_credential_error_message">Invalid Credentials! Login with valid credentials</string>
    <string name="update_kyc_message">Please upgrade your KYC level on your MyBiz app to login here</string>
    <string name="retry_later_limit_exceed">Retry limit exceeded kindly try again after sometime</string>
    <string name="move_all_text">Move All</string>
    <string name="input_preferred_amount">Input Preferred Amount</string>
    <string name="payment_details">Payment Details</string>
    <string name="remark">Remark</string>
    <string name="copyright_text">(c) aicortex Digital Systems Limited, 2023</string>
    <string name="please_login_with_email">Please login with your registered email address.</string>
    <string name="please_login_with_wallet">Please login with your Wallet ID.</string>
    <string name="kindly_add_6digit_number">Kindly add the 6-digit number sent to your phone.</string>
    <string name="kindly_add_6digit_number_on_email">Kindly add the 6-digit number sent to your email.</string>
    <string name="please_type_success_failed">Please type Success or failed</string>
    <string name="link_unavailable">Link is unavailable</string>
    <string name="download_msg">Downloading file</string>
    <string name="no_history">Transaction history not found</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="snack_doNotMoveCard">Please do not move card, try again !</string>
    <string name="snack_unknownEmv">Unknown EMV card.\nPlease try again with a Master or Visa card.</string>
    <string name="snack_lockedNfcCard">NFC is locked on this card.</string>
</resources>