<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainBiometricLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#95000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_top"
            android:paddingLeft="16dp"
            android:paddingTop="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_biometric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageBioMetricAnimation"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_140"
                    android:src="@drawable/biomatric"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_setup_bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_layout_biometric">

                <TextView
                    android:id="@+id/text_setup_biometric_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_your_"
                    android:textColor="@color/color_success"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/setup_your_finger_or_face"
                    android:textColor="@color/perform_transaction_color"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_setup_biometric_details" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_biometric_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/constraint_layout_setup_bio_text">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_for_biometric_edit"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/biometric_login_text"
                        android:textColor="@color/edit_email_wallet_hint_color"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_turnOnOffLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/turn_off"
                            android:textColor="#6C6C6C"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/toggle_biometric_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_centerHorizontal="true"
                            android:buttonTint="@color/blue"
                            android:elevation="4dp"
                            android:gravity="center"
                            android:textColor="#f00"
                            app:thumbTint="@color/white"
                            app:trackTint="@color/blue" />

                        <TextView
                            android:id="@+id/text_turnOnOffRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/turn_on"
                            android:textColor="#BAB4B4"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_btn_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="@dimen/dp_32"
                app:layout_constraintTop_toBottomOf="@+id/constraint_biometric_switch">

                <Button
                    android:id="@+id/btn_proceed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg_grey_signup_borderless"
                    android:text="@string/proceed"
                    android:textSize="@dimen/dp_14"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>