<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#95000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_top"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_16">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/dp_10"
                        android:weightSum="100">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/center_ncc"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/dp_120"
                            android:layout_weight="90"
                            android:gravity="center"
                            app:srcCompat="@drawable/lockwithdot" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/button_cancel"
                            android:layout_width="0dp"
                            android:padding="@dimen/dp_5"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:gravity="top|right"
                            app:srcCompat="@drawable/closecrossbutton" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_45"
                        android:gravity="left"
                        android:text="@string/reset_pin"
                        android:textColor="#262729"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_24"
                        android:fontFamily="@font/montserrat"
                        android:gravity="left"
                        android:text="@string/oops_cant_remember_pin"
                        android:textColor="#495260"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_marginTop="@dimen/dp_32"
                        android:background="@drawable/round_corner_back"
                        android:orientation="vertical"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/otp_will_be_sent"
                            android:textColor="#6C6C6C"
                            android:paddingLeft="@dimen/dp_16"
                            android:textSize="@dimen/sp_16"
                            android:textStyle="bold" />

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_8"
                            android:layout_marginLeft="@dimen/dp_16"
                            android:gravity="left|center_horizontal"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textColor="#6C6C6C"
                                android:gravity="right|center"
                                android:textSize="@dimen/sp_16"
                                android:textStyle="normal" />

                            <CheckBox
                                android:id="@+id/checkBoxEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center|center_horizontal"
                                android:layout_marginLeft="@dimen/dp_15"
                                android:checked="true"
                                android:button="@drawable/checkbox_selector"
                                android:textColor="#686B71"
                                android:textSize="@dimen/sp_16" />

                            <LinearLayout
                                android:layout_width="12dp"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="@dimen/dp_3"
                                android:layout_marginLeft="@dimen/dp_25"
                                android:orientation="vertical">
                                <View
                                    android:layout_width="1dp"
                                    android:layout_height="match_parent"
                                    android:background="#686B71" />
                            </LinearLayout>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sms"
                                android:layout_marginLeft="@dimen/dp_25"
                                android:textColor="#6C6C6C"
                                android:gravity="right|center"
                                android:textSize="@dimen/sp_16"
                                android:textStyle="normal"/>

                            <CheckBox
                                android:id="@+id/checkBoxSms"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center|center_horizontal"
                                android:layout_marginLeft="@dimen/dp_15"
                                android:checked="false"
                                android:button="@drawable/checkbox_selector"
                                android:textColor="#686B71"
                                android:textSize="@dimen/sp_16" />

                        </LinearLayout>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/proceedForgetPin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        android:layout_marginTop="@dimen/dp_48"
                        android:layout_marginBottom="@dimen/dp_32"
                        android:background="@drawable/button_base"
                        android:gravity="center"
                        android:text="@string/proceed"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>
            </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>